[package]
name = "esp-homekit-sdk-sys"
version = "0.1.0"
authors = ["Philipp Scheff <philippscheff@me.com>"]
edition = "2021"
links = "esp_homekit_sdk"
build = "build.rs"

[features]
default = ["std"]

std = ["embedded-svc/std"]

[dependencies]
embedded-svc = "0.22.0"
log = "0.4"

[build-dependencies]
anyhow = "1"
dotenv = "0.15"
embuild = { version = "0.30", features = ["bindgen", "kconfig", "pio", "glob"] }
walkdir = "2.3.2"
regex = "1.6.0"
